# viewmd

./: .gitignore  .taskmd.yaml  .viewmd.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  viewmd.py
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
apps/cli/: Makefile  go.mod  go.sum  integration_test.go  integration_text_dir_routing_test.go
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/getting-started/: index.md  installation.md  quick-start.md
docs/guide/: directory-browsing.md  keyboard-shortcuts.md  search.md  viewing-files.md
docs/plan/: migration_to_go.md
docs/reference/: cli.md  configuration.md  file-types.md
python/: README.md  pyproject.toml
python/viewmd/: render.py
tasks/: 016-add-vitepress-documentation-site.md
tasks/.worklogs/: 016.md
tasks/cli/: 001-initialize-go-project-scaffolding.md  002-implement-frontmatter-parser.md  003-implement-file-type-classification.md  004-build-html-rendering-templates.md  005-implement-http-handler-and-routing.md  006-build-cli-entry-point-and-server-startup.md  007-port-integration-tests-to-go.md  008-set-up-go-build-and-release-ci.md  009-clean-up-python-source-and-update-docs.md  010-implement-request-routing-and-directory-listing.md  011-implement-markdown-serving.md  012-implement-text-and-static-file-serving.md  013-set-up-integration-test-infrastructure.md  014-port-markdown-and-frontmatter-integration-tests.md  015-port-text-directory-and-routing-integration-tests.md  017-add-parent-folder-navigation-to-file-view.md  018-add-copy-to-clipboard-button-for-page-contents.md  019-support-global-daemon-mode-with-multi-folder-servi.md  020-add-keyboard-navigation-for-directory-tree-browsin.md  021-add-customizable-styling-via-cli-flags-and-yaml-co.md  022-add-light-dark-mode-toggle-with-localstorage-persi.md  023-improve-server-stdout-log-format-for-readability.md  024-publish-cli-to-homebrew-tap.md  025-make-readme-md-auto-render-opt-in-via-cli-flag-or.md  026-hide-non-markdown-files-and-empty-folders-by-defau.md  027-improve-ui-design-minimal-and-functional-refresh.md  028-improve-keyboard-navigation-auto-highlight-directo.md  029-show-file-path-breadcrumb-when-viewing-a-file.md  030-add-full-text-search-with-keyboard-driven-ui.md  031-add-code-syntax-highlighting-for-text-code-files.md  032-add-inline-image-viewing.md  033-add-support-for-configurable-ignore-patterns.md  034-add-a-watch-flag-to-auto-refresh-file-changes-in-t.md  035-add-native-taskmd-file-support-in-viewer.md  (+1 more)
tests/: test_frontmatter.py  test_server.py
viewmd/: __init__.py
(+59 files in other folders)
