[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viewmd"
version = "0.1.5"
description = "Simple HTTP server for viewing Markdown files in your browser"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "German Greiner"}
]
keywords = ["markdown", "viewer", "http-server", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "markdown>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pylint"]

[project.scripts]
viewmd = "viewmd:main"

[tool.setuptools]
packages = ["viewmd"]

[project.urls]
Homepage = "https://github.com/driangle/viewmd"

[tool.pylint.format]
max-module-lines = 200

[tool.pylint.design]
max-statements = 30

[tool.pylint."messages control"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "redefined-outer-name",
    "duplicate-code",
    "unused-variable",
    "attribute-defined-outside-init",
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "e", "f", "h", "fm", "md", "ek", "ev", "srv"]
